syntax = "proto3";

import "scalapb/scalapb.proto";
import "descriptor.proto";
import "data.proto";

option (scalapb.options) = {
    package_name: "io.logbee.keyscore.model.configuration"
    flat_package: true
};

message Configuration {
    option (scalapb.message).extends = "io.logbee.keyscore.model.configuration.QueryableConfiguration";
    string id = 1;
    Configuration parent = 2;
    repeated Parameter parameters = 3;
}

message Parameter {
    oneof sealed_value {
        BooleanParameter boolean = 1;
        TextParameter text = 2;
        NumberParameter number = 3;
        DecimalParameter decimal = 4;
        FieldNameParameter fieldName = 5;
        FieldParameter field = 6;
        TextListParameter textList = 7;
        FieldNameListParameter fieldNameList = 8;
        FieldListParameter fieldList = 9;
        ChoiceParameter choice = 10;
    }
}

message BooleanParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    bool value = 2;
}

message TextParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    string value = 2;
}

message NumberParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    sint64 value = 2;
}

message DecimalParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    double value = 2;
}

message FieldNameParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    string value = 2;
}

message FieldParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    Field value = 2;
}

message TextListParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    repeated string value = 2;
}

message FieldNameListParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    repeated string value = 2;
}

message FieldListParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    repeated Field value = 2;
}

message ChoiceParameter {
    ParameterRef ref = 1 [(scalapb.field).no_box = true];
    string value = 2;
}